# open-responses-agent-skill

./: AGENTS.md  LICENSE  README.md  REDDIT_POST.md
.claude-plugin/: plugin.json
.codex/: instructions.md
.cursor/rules/: open-responses-agent.mdc
.opencode/: opencode.json
docs/: migration-guide.md  provider-comparison.md
examples/python/: basic_agent.py  multi_provider.py  reasoning_visibility.py  sub_agent_loop.py
examples/rust/: Cargo.toml  basic_agent.rs  multi_provider.rs  reasoning_visibility.rs  sub_agent_loop.rs
examples/typescript/: basic-agent.ts  multi-provider.ts  reasoning-visibility.ts  sub-agent-loop.ts
skills/open-responses-agent-dev/: SKILL.md
templates/python/: agent_template.py
templates/rust/: Cargo.toml
templates/rust/src/: main.rs
templates/typescript/: agent-template.ts
