[package]
name = "open-responses-examples"
version = "0.1.0"
edition = "2021"
description = "Open Responses API examples in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "basic_agent"
path = "basic_agent.rs"

[[bin]]
name = "sub_agent_loop"
path = "sub_agent_loop.rs"

[[bin]]
name = "multi_provider"
path = "multi_provider.rs"

[[bin]]
name = "reasoning_visibility"
path = "reasoning_visibility.rs"
