[package]
name = "open-responses-agent"
version = "0.1.0"
edition = "2021"
description = "Open Responses Agent - Production-ready template"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "agent"
path = "src/main.rs"
